{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 36,
  "lineage": "5243288c-fc55-0ff5-6534-71e226f5fa94",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aef0fbd78aebec64",
            "domain": "vpc",
            "id": "eipalloc-0aef0fbd78aebec64",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-83-61-60.compute-1.amazonaws.com",
            "public_ip": "54.83.61.60",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239331059781:internet-gateway/igw-00098c4ade7bba74e",
            "id": "igw-00098c4ade7bba74e",
            "owner_id": "239331059781",
            "tags": {
              "Environment": "DEV",
              "Name": "timing-01",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "timing-01",
              "Terraform": "true"
            },
            "vpc_id": "vpc-013d1ebbf640b7f84"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aef0fbd78aebec64",
            "association_id": "eipassoc-0870d284f37095596",
            "connectivity_type": "public",
            "id": "nat-05fb0ec48c517782e",
            "network_interface_id": "eni-06571b41356df8748",
            "private_ip": "10.0.1.169",
            "public_ip": "54.83.61.60",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0add726fc97b9dcb2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09474407c45407ddf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05fb0ec48c517782e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09474407c45407ddf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.database_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ce0b2da92dc82c0c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05fb0ec48c517782e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ce0b2da92dc82c0c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239331059781:route-table/rtb-09474407c45407ddf",
            "id": "rtb-09474407c45407ddf",
            "owner_id": "239331059781",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "DEV",
              "Name": "timing-01-database-rt",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "timing-01-database-rt",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-013d1ebbf640b7f84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239331059781:route-table/rtb-0ce0b2da92dc82c0c",
            "id": "rtb-0ce0b2da92dc82c0c",
            "owner_id": "239331059781",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "DEV",
              "Name": "timing-01-private-rt",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "timing-01-private-rt",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-013d1ebbf640b7f84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239331059781:route-table/rtb-0f3f4f7f522f60bcc",
            "id": "rtb-0f3f4f7f522f60bcc",
            "owner_id": "239331059781",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00098c4ade7bba74e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "DEV",
              "Name": "timing-01-public-rt",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "timing-01-public-rt",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-013d1ebbf640b7f84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a97896ef65f8c9f6",
            "route_table_id": "rtb-09474407c45407ddf",
            "subnet_id": "subnet-0db3779de41f5701c"
          },
          "dependencies": [
            "aws_route_table.database_route_table",
            "aws_subnet.database_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7016aef31c60e47",
            "route_table_id": "rtb-0ce0b2da92dc82c0c",
            "subnet_id": "subnet-01dd804fbdd1af519"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af58798052226525",
            "route_table_id": "rtb-0f3f4f7f522f60bcc",
            "subnet_id": "subnet-0add726fc97b9dcb2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239331059781:subnet/subnet-0db3779de41f5701c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db3779de41f5701c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "239331059781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "timing-01-database-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "timing-01-database-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-013d1ebbf640b7f84"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239331059781:subnet/subnet-01dd804fbdd1af519",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dd804fbdd1af519",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "239331059781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "timing-01-private-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "timing-01-private-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-013d1ebbf640b7f84"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239331059781:subnet/subnet-0add726fc97b9dcb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0add726fc97b9dcb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "239331059781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "timing-01-public-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "timing-01-public-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-013d1ebbf640b7f84"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239331059781:vpc/vpc-013d1ebbf640b7f84",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a36cf4c0c57d6dc",
            "default_route_table_id": "rtb-0ec1bb2690777a85d",
            "default_security_group_id": "sg-011795a7c0c03ded6",
            "dhcp_options_id": "dopt-013ccc9a62bd9358c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-013d1ebbf640b7f84",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec1bb2690777a85d",
            "owner_id": "239331059781",
            "tags": {
              "Environment": "DEV",
              "Name": "timing-01",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "timing-01",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}